--- a/index.html
+++ b/index.html
@@ -1,1 +1,83 @@
-Hello World
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Profile</title>
+</head>
+
+<body>
+    <header>
+        <h1>Enrique García</h1>
+        <p>Web Developer</p>
+    </header>
+    <img src="https://media.licdn.com/dms/image/C4E03AQEabF5Yq9QXng/profile-displayphoto-shrink_800_800/0/1650943313454?e=1691625600&v=beta&t=Pwmm4FBWSef5UK1uEBvbO2UF1PRLSkeWeTax3ZIhdf8"
+        alt="Profile-Picture" id="my-picture" class="image-center">
+    <main>
+        <article>
+            <section>
+                <h2 id="heading-about">About</h2>
+                <p>
+                    I am a former English teacher and technology advocate looking to pursue a career in the
+                    the tech industry. As an Apple Certified Teacher, I always sought out innovative ways to engage my
+                    students using technology. In addition to my experience with Apple apps, I also have knowledge of
+                    various Google apps and taught my students how to use them.
+                </p>
+
+                <p>
+                    Recently, I completed several online courses, including web development courses where I learned
+                    basic
+                    HTML, CSS, and JavaScript. Additionally, I learned Python and Technical Support Fundamentals, which
+                    has
+                    given me a deeper understanding of how different technologies can work together to create
+                    user-friendly
+                    applications.
+                </p>
+
+                Currently, I am focused on advancing my front-end skills by taking more advanced courses, and I plan to
+                learn React and Node.js in the future. My passion for learning and growth in this field has me actively
+                seeking internships or bootcamps that offer hands-on experience with these technologies. I am
+                particularly interested in opportunities to collaborate on real-world projects with other developers.
+            </section>
+            <section>
+                <h2 id="heading-skills">Skills</h2>
+                <ul>
+                    <li>HTML</li>
+                    <li>Javascript</li>
+                    <li>CSS</li>
+                    <li>Python</li>
+                </ul>
+            </section>
+            <section>
+                <h2 id="heading-certificates">Certificates</h2>
+                <ul>
+                    <li><a href="https://www.coursera.org/account/accomplishments/verify/ET9WDJUGADZF"
+                            target="_blank">Introduction to Front-End Development</a></li>
+                    <li><a href="https://www.coursera.org/account/accomplishments/verify/ZDT3DQFSH9B5"
+                            target="_blank">Programming with Javascript</a></li>
+                    <li><a href="https://www.coursera.org/account/accomplishments/verify/P4YMLK3L7KG4"
+                            target="_blank">Technical Support Fundamentals</a></li>
+                    <li><a href="https://www.coursera.org/account/accomplishments/verify/6D2KXTHZ2NHC"
+                            target="_blank">Crash Course in Python</a></li>
+                    <li><a href="https://www.coursera.org/account/accomplishments/verify/QUDUAR5GUV25"
+                            target="_blank">Introduction to Cloud Computing</a></li>
+                </ul>
+            </section>
+            <section>
+                <h2 id="heading-projects">Projects and Links</h2>
+                <ul>
+                    <li><a href="https://codepen.io/ggEnrique" target="_blank">CodePen Profile</a></li>
+                    <li><a href="https://github.com/ggEnrique" target="_blank">GitHub Profile</a></li>
+                    <li><a href="https://www.linkedin.com/in/enrique-g-a209b3238/" target="_blank">LinkedIn Profile</a>
+                    </li>
+                </ul>
+            </section>
+        </article>
+
+    </main>
+    <footer>
+        <p>&copy; Enrique García 2023</p>
+    </footer>
+</body>
+
+</html>
