Updated the bio section of the site

--- a/index.html
+++ b/index.html
@@ -20,27 +20,23 @@
         <article>
             <section>
                 <h2 id="heading-about">About</h2>
-                <p>
-                    I am a former English teacher and technology advocate looking to pursue a career in the
-                    the tech industry. As an Apple Certified Teacher, I always sought out innovative ways to engage my
-                    students using technology. In addition to my experience with Apple apps, I also have knowledge of
-                    various Google apps and taught my students how to use them.
-                </p>
+                <p>I am a former English teacher and technology advocate, now enthusiastically transitioning towards a
+                    career in the tech industry. As an Apple Certified
+                    Teacher, I've always explored innovative methods to engage my students using technology. Besides my
+                    experience with Apple apps, I've also gained familiarity with various Google apps and have imparted
+                    this knowledge to my students.</p>
 
-                <p>
-                    Recently, I completed several online courses, including web development courses where I learned
-                    basic
-                    HTML, CSS, and JavaScript. Additionally, I learned Python and Technical Support Fundamentals, which
-                    has
-                    given me a deeper understanding of how different technologies can work together to create
-                    user-friendly
-                    applications.
-                </p>
+                <p>Recently, I have completed a series of online courses, including web development ones where I've
+                    acquired foundational skills in HTML, CSS, and JavaScript. Alongside this, I have also learned
+                    Python and Technical Support Fundamentals. This has deepened my understanding of how different
+                    technologies can interplay to create user-friendly applications.</p>
 
-                Currently, I am focused on advancing my front-end skills by taking more advanced courses, and I plan to
-                learn React and Node.js in the future. My passion for learning and growth in this field has me actively
-                seeking internships or bootcamps that offer hands-on experience with these technologies. I am
-                particularly interested in opportunities to collaborate on real-world projects with other developers.
+                <p>Presently, my attention is concentrated on honing my front-end skills through more advanced courses,
+                    with a roadmap to learn React and Node.js in the near future. My relentless passion for learning and
+                    progressing in this field has driven me to actively seek internships or bootcamps that offer
+                    immersive, hands-on experience with these technologies. I am particularly excited about
+                    opportunities that allow me to collaborate on real-world projects with other developers and apply my
+                    technical support skills to solve complex problems.</p>
             </section>
             <section>
                 <h2 id="heading-skills">Skills</h2>
