--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Enrique García</h1>
         <p>Web Developer</p>
     </header>
-    <img src="https://media.licdn.com/dms/image/D4D03AQEMV68Q3jZlXw/profile-displayphoto-shrink_800_800/0/1690496803655?e=1695859200&v=beta&t=sH0CiaTS1NVW7wO8XgGMyuS8W1x_mVtCgOseps24sjc"
+    <img src= "img/121460710.jpg"
         alt="Profile-Picture" id="my-picture" class="image-center">
     <main>
         <article>
