Updated Project Links and Layout

--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
                 </ul>
             </section>
             <section>
+                <h2 id="heading-projects">Projects and Links</h2>
+                <ul>
+                    <li><a href="https://github.com/ggEnrique" target="_blank">GitHub Profile</a></li>
+                    <li><a href="https://www.linkedin.com/in/enrique-g-a209b3238/" target="_blank">LinkedIn Profile</a>
+                    <li><a href="https://ggenrique.github.io/Encrypter-Decrypter/" target="_blank">Secret Message Encrypter-Decrypter</a></li>
+                    <li><a href="https://ggenrique.github.io/BarberShopWebsite/index.html" target="_blank">Barber Shop Website</a></li>
+                </ul>
+            </section>
+            <section>
                 <h2 id="heading-certificates">Certificates</h2>
                 <ul>
                     <li><a href="https://www.coursera.org/account/accomplishments/verify/ET9WDJUGADZF"
@@ -60,15 +69,6 @@
                             target="_blank">Crash Course in Python</a></li>
                     <li><a href="https://www.coursera.org/account/accomplishments/verify/QUDUAR5GUV25"
                             target="_blank">Introduction to Cloud Computing</a></li>
-                </ul>
-            </section>
-            <section>
-                <h2 id="heading-projects">Projects and Links</h2>
-                <ul>
-                    <li><a href="https://codepen.io/ggEnrique" target="_blank">CodePen Profile</a></li>
-                    <li><a href="https://github.com/ggEnrique" target="_blank">GitHub Profile</a></li>
-                    <li><a href="https://www.linkedin.com/in/enrique-g-a209b3238/" target="_blank">LinkedIn Profile</a>
-                    </li>
                 </ul>
             </section>
         </article>
