--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     this knowledge to my students.</p>
 
                 <p>Recently, I have completed a series of online courses, including web development ones where I've
-                    acquired foundational skills in HTML, CSS, and JavaScript. Alongside this, I have also learned
-                    Python and Technical Support Fundamentals. This has deepened my understanding of how different
+                    acquired foundational skills in HTML, CSS, JavaScript, and Java with Spring Boot. Alongside this, I have also learned
+                    Python and received a Technical Support Certificate from Google. This has deepened my understanding of how different
                     technologies can interplay to create user-friendly applications.</p>
 
-                <p>Presently, my attention is concentrated on honing my front-end skills through more advanced courses,
+                <p>Presently, my attention is concentrated on honing my back-end and front-end skills through more advanced courses,
                     with a roadmap to learn React and Node.js in the near future. My relentless passion for learning and
                     progressing in this field has driven me to actively seek internships or bootcamps that offer
                     immersive, hands-on experience with these technologies. I am particularly excited about
@@ -45,6 +45,7 @@
                     <li>Javascript</li>
                     <li>CSS</li>
                     <li>Python</li>
+                    <li>Java</li>
                 </ul>
             </section>
             <section>
