Update link to Certificate

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                             target="_blank">Introduction to Front-End Development</a></li>
                     <li><a href="https://www.coursera.org/account/accomplishments/verify/ZDT3DQFSH9B5"
                             target="_blank">Programming with Javascript</a></li>
-                    <li><a href="https://www.coursera.org/account/accomplishments/verify/P4YMLK3L7KG4"
-                            target="_blank">Technical Support Fundamentals</a></li>
+                    <li><a href="https://www.coursera.org/account/accomplishments/professional-cert/35E8F5Z2DY8L"
+                            target="_blank">Google IT Support Certificate</a></li>
                     <li><a href="https://www.coursera.org/account/accomplishments/verify/6D2KXTHZ2NHC"
                             target="_blank">Crash Course in Python</a></li>
                     <li><a href="https://www.coursera.org/account/accomplishments/verify/QUDUAR5GUV25"
